--- a/mod1_sol/index.html
+++ b/mod1_sol/index.html
@@ -17,7 +17,7 @@
              <input id="lunch-menu" type="text" name="items"
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control" ng-model="input_elem" required>
-             <span ng-if="myform.items.$touched || myform.items.$invalid"><p ng-show>Please enter items</p></span>
+             <span ng-show="myform.items.$error.required || myform.items.$invalid">Please enter items</span>
              <!-- Considering empty item or a space in the text box as an item -->
          </div>
          <div class="form-group">
