mod1_sol/index.html

--- a/mod1_sol/index.html
+++ b/mod1_sol/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="bootstrap.min.css">
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
+      input.ng-invalid {border:1px solid red;}
+      input.ng-valid {border: 1px solid green;}
     </style>
   </head>
 <body ng-app="LunchCheck">
@@ -17,14 +19,14 @@
              <input id="lunch-menu" type="text" name="items"
              placeholder="list comma separated dishes you usually have for lunch"
              class="form-control" ng-model="input_elem" required>
-             <span ng-show="myform.items.$error.required || myform.items.$invalid">Please enter items</span>
+             <span ng-show="myform.items.$error.required || myform.items.$invalid" style="color:red">Please enter items</span>
              <!-- Considering empty item or a space in the text box as an item -->
          </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click="splitString(input_elem, ',')">Check If Too Much</button>
              <!-- {{arrayOfStrings.length<=3}} -->
              <br>
-              <span ng-if= 'arrayOfStrings.length<=3'>Enjoy!</span>
+              <span ng-if= 'arrayOfStrings.length<=3' style="color:green">Enjoy!</span>
              <span ng-if= 'arrayOfStrings.length>=4'>Too much</span>
          </div>
          <div class="form-group message">
