--- a/mod2_sol/index.html
+++ b/mod2_sol/index.html
@@ -5,27 +5,53 @@
 	<script src="angular.min.js"></script>
 	<script src="app.js"></script>
 	<link rel="stylesheet" type="text/css" href="app.css">
+	 <link rel="stylesheet" href="bootstrap.min.css">
+	 <style>
+      .emptyMessage {
+        font-weight: bold;
+        color: red;
+        font-size: 1.2em;
+      }
+      li {
+        margin-bottom: 7px;
+        font-size: 1.2em;
+      }
+      li > button {
+        margin-left: 6px;
+      }
+      button > span {
+        color: green;
+      }
+    </style>
 </head>
 <body>
 <div ng-controller="ToBuyController as tbc">
-<h1>To Buy</h1>
-<table>
-<tr ng-repeat="item in tbc.items" >
-<td>Buy {{item.quantity}} {{item.name}}</td>
-<td><button ng-click="tbc.bought($index)">Bought</button></td>
-</tr>
-<tr><td ng-if="tbc.items.length==0" class="textcolor">Everything is bought</td></tr>
-</table>
+<div class="container">
+<h1>Shopping List Check Off</h1>
+
+  <div class="row">
+
+    <!-- To Buy List -->
+    <div class="col-md-6">
+<h2>To Buy</h2>
+<ul>
+<li ng-repeat="item in tbc.items">
+Buy {{item.quantity}} {{item.name}} 
+<button class="btn btn-default" ng-click="tbc.bought($index)"><span class="glyphicon glyphicon-ok"></span>Bought</button></li>
+</ul>
+<div class="emptyMessage" ng-if="tbc.items.length==0" class="textcolor">Everything is bought</div>
 </div>
-<pre>================================================</pre>
+</div>
+
 <div ng-controller="AlreadyBoughtController as abc">
-<h1>Already Bought</h1>
-<table>
-<tr ng-repeat="bought in abc.boughtitems">
-<td>Bought {{bought[0].quantity}} {{bought[0].name}}</td>
-</tr>
-<tr><td ng-if="abc.boughtitems.length==0" class="textcolor">Nothing bought yet</td></tr>
-</table>
+<div class="col-md-6">
+     <h2>Already Bought:</h2>
+     <ul>
+<li ng-repeat="bitem in abc.boughtitems">
+Bought {{bitem[0].quantity}} {{bitem[0].name}}</li>
+</ul>
+<div class="emptyMessage" ng-if="abc.boughtitems.length==0" class="textcolor">Nothing bought yet</div>
+</div>
 </div>
 </body>
 </html>
