--- a/mod2_sol/index.html
+++ b/mod2_sol/index.html
@@ -44,13 +44,15 @@ Buy {{item.quantity}} {{item.name}}
 </div>
 
 <div ng-controller="AlreadyBoughtController as abc">
+
 <div class="col-md-6">
      <h2>Already Bought:</h2>
      <ul>
 <li ng-repeat="bitem in abc.boughtitems">
-Bought {{bitem[0].quantity}} {{bitem[0].name}}</li>
+Bought {{bitem.quantity}} {{bitem.name}}</li>
 </ul>
 <div class="emptyMessage" ng-if="abc.boughtitems.length==0" class="textcolor">Nothing bought yet</div>
+</div>
 </div>
 </div>
 </body>
