--- a/mod3_sol/index.html
+++ b/mod3_sol/index.html
@@ -17,10 +17,12 @@
       <button class="btn btn-primary" ng-click="narrowItDown.clicked(searchterm)">Narrow It Down For Me!</button>
 
 </div>
-<div class="form-group message">{{message}} </div>
+<br/>
+
     <!-- Bonus loader (see Bonus section of the assignment) -->
     <!-- <items-loader-indicator></items-loader-indicator> -->
   </div>
+  <div class="form-group message, container">{{message}} </div>
   <found-items my-list='narrowItDown' on-remove= 'narrowItDown.ItemRemoved(index)'></found-items>
   <script src="angular.min.js"></script>
 <script src="app.js"></script>
