--- a/mod3_sol/foundItems.html
+++ b/mod3_sol/foundItems.html
@@ -1,6 +1,6 @@
 <div ng-if="myCtrl.containsItems()">
 <table class="table">
-<tr class="success" ><th>User</th><th>Id</th><th>Url</th><th>Followers</th></tr>
+<tr class="success" ><th>Name</th><th>Short Name</th><th>Description</th><th>Remove</th></tr>
 <tr ng-repeat="category in myCtrl.mylist.found">
 <td>{{category.matchitems.name}}</td>
 <td>{{category.matchitems.short_name}}</td>
