--- a/mod3_sol/foundItems.html
+++ b/mod3_sol/foundItems.html
@@ -1,4 +1,4 @@
-<div ng-if="myCtrl.containsItems()">
+<div class="container" ng-if="myCtrl.containsItems()">
 <table class="table">
 <tr class="success" ><th>Name</th><th>Short Name</th><th>Description</th><th>Remove</th></tr>
 <tr ng-repeat="category in myCtrl.mylist.found">
