--- a/mod3_sol/index.html
+++ b/mod3_sol/index.html
@@ -24,6 +24,7 @@
   </div>
   <div class="form-group message, container">{{message}} </div>
   <found-items my-list='narrowItDown' on-remove= 'narrowItDown.ItemRemoved(index)'></found-items>
+  <script src="jquery-3.1.1.min.js"></script>
   <script src="angular.min.js"></script>
 <script src="app.js"></script>
 </body>
