--- a/mod4_sol/items.template.html
+++ b/mod4_sol/items.template.html
@@ -1,6 +1,6 @@
 
 
-<!-- {{$ctrl.items.gotitems}} -->
+<h3>List of items</h3>
 <ul>
 <li ng-repeat= 'item in mainItemsList.items'>
 {{item.name}}-->
