removed unnecessary code

--- a/mod4_sol/index.html
+++ b/mod4_sol/index.html
@@ -6,19 +6,11 @@
 </head>
 <body>
 <h1>Restaurant Menu</h1>
-<!-- <div ng-repeat='ct in cc.getAllCategories'>
-{{ct.short_name}}
-{{ct.name}}
-</div> -->
 
-<!-- <categories-list category='cc' on-view-change='cc.getItemsForCategory=$event.getItemsForCategory' items='cc'></categories-list> -->
-<!-- <items-list items='cc'></items-list> -->
 
 <ui-view></ui-view>
 <script src="angular.min.js"></script>
-
-<!-- <script type="text/javascript" src="main-categories.template.html"></script>
- --><script src="menuapp.module.js"></script>
+<script src="menuapp.module.js"></script>
 <script src="data.module.js"></script>
 <script type="text/javascript" src="https://apigee.com/usergrid/sdk/usergrid.0.10.5.js"></script>
 <script src="categories.controller.js"></script>
@@ -28,8 +20,5 @@
 <script src="items.component.js"></script>
 <script src="angular-ui-router.min.js"></script>
 <script src="routes.js"></script>
-
-<!-- <script src="categories.template.html"></script>
-<script src="items.template.html"></script> -->
 </body>
 </html>
