--- a/mod4_sol/index.html
+++ b/mod4_sol/index.html
@@ -7,18 +7,17 @@
 <body>
 <h1>Restaurant Menu</h1>
 
-
 <ui-view></ui-view>
-<script src="angular.min.js"></script>
-<script src="menuapp.module.js"></script>
-<script src="data.module.js"></script>
-<script type="text/javascript" src="https://apigee.com/usergrid/sdk/usergrid.0.10.5.js"></script>
-<script src="categories.controller.js"></script>
-<script src="items.controller.js"></script>
-<script src="menudata.service.js"></script>
-<script src="categories.component.js"></script>
-<script src="items.component.js"></script>
-<script src="angular-ui-router.min.js"></script>
+
+<script src="lib/angular.min.js"></script>
+<script src="src/module/menuapp.module.js"></script>
+<script src="src/module/data.module.js"></script>
+<script src="src/controller/categories.controller.js"></script>
+<script src="src/controller/items.controller.js"></script>
+<script src="src/service/menudata.service.js"></script>
+<script src="src/component/categories.component.js"></script>
+<script src="src/component/items.component.js"></script>
+<script src="lib/angular-ui-router.min.js"></script>
 <script src="routes.js"></script>
 </body>
 </html>
