--- a/module5_sol/index.html
+++ b/module5_sol/index.html
@@ -119,13 +119,7 @@
     <!-- Main Restaurant Module -->
     <script src="src/restaurant.module.js"></script>
 
-    <!-- Common Module -->
-    <script src="src/common/common.module.js"></script>
-    <script src="src/common/loading/loading.component.js"></script>
-    <script src="src/common/loading/loading.interceptor.js"></script>
-    <script src="src/common/menu.service.js"></script>
-    <script src="src/common/signup.service.js"></script>
-
+    
     <!-- Public Module -->
     <script src="src/public/public.module.js"></script>
     <script src="src/public/public.routes.js"></script>
@@ -135,7 +129,15 @@
     <script src="src/public/menu-item/menu-item.component.js"></script>
     <script src="src/public/signup/signup.controller.js"></script>
     <script src="src/public/signup/myinfo.controller.js"></script>
-    <script src="src/public/signup/signup.component.js"></script>
+    <script src="src/public/signup/myinfo.component.js"></script>
+
+    <!-- Common Module -->
+    <script src="src/common/common.module.js"></script>
+    <script src="src/common/loading/loading.component.js"></script>
+    <script src="src/common/loading/loading.interceptor.js"></script>
+    <script src="src/common/menu.service.js"></script>
+    <script src="src/common/userinfo.service.js"></script>
+
 
     <!-- ADMIN SITE -->
 
