--- a/module5_sol/src/public/signup/myinfo.html
+++ b/module5_sol/src/public/signup/myinfo.html
@@ -1,20 +1,31 @@
+<table style="width:100%;text-align:left;">
+<tr>
+<td>First Name</td>
+<td>{{$ctrl.info.fname}}</td>
+</tr>
+<tr>
+<td>last Name</td>
+<td>{{$ctrl.info.lname}}</td>
+</tr>
+<tr>
+<td>E-Mail</td>
+<td>{{$ctrl.info.mail}}</td>
+</tr>
+<tr>
+<td>Phone</td>
+<td>{{$ctrl.info.phnnum}}</td>
+</tr>
+<tr>
+<td>Favourite</td>
+<td>
+<h4>{{$ctrl.info.preference.name}}</h4>
+<div class="menu-item-photo" style="margin:0px;">
+        <div>{{$ctrl.info.menunumber}}</div>
+        <img class="img-responsive" width="250" height="150" ng-src="{{$ctrl.info.imgsrc}}">
+</div>
+<span>{{$ctrl.info.preference.description}}</span>
 
-<div ng-if="myInfo.getInfo=='' || myInfo.getInfo== udefined || myInfo.itemInfo== ''">Not signed up Yet.<a ui-sref="public.signup">Sign up Now</a></div>
-<h2>Customer Details</h2>
-<ul>
-<li ng-repeat='cat in myInfo.getInfo'>
-<b>Firstname</b>-{{cat.fname}}<br/>
-<b>Lastname</b>-{{cat.lname}}<br/>
-<b>Mail id</b>-{{cat.mail}}<br/>
-<b>Phone Number</b>-{{cat.phnnum}}<br/>
-<b>Menu Number requested</b>-{{cat.menunumber}}<br/>
 
-</li>
-</ul>
-<h3>Your preferred item description</h3>
-<ul>
-<li>
-Name:{{myInfo.itemInfo.name}}
-<br>Description:{{myInfo.itemInfo.description}}
-</li>
-
+</td>
+</tr>
+</table>
