--- a/module5_sol/src/public/signup/signup.html
+++ b/module5_sol/src/public/signup/signup.html
@@ -24,7 +24,7 @@ Please enter the menunumber:<input type="text" id="menunumber" name="menunumber"
 <span ng-if="userList.menuInvalid">No such menu item exists</span>
 </div>
 <div id="div1">
-<button  ng-click="userList.setPreferences()">Sign up</button>
+<button class="btn" ng-click="userList.setPreferences()">Sign up</button>
 <span ng-if='userList.success'>Your information has been saved.</span>
 </div>
 </form>
